@@ -115,7 +115,7 @@ ifneq ($(CONFIG_DISABLE_SIGNALS),y)
 PTHREAD_SRCS	+= pthread_condtimedwait.c pthread_kill.c pthread_sigmask.c
 endif
 
-SEM_SRCS	= sem_initialize.c sem_open.c sem_close.c sem_unlink.c \
+SEM_SRCS	= sem_initialize.c sem_destroy.c sem_open.c sem_close.c sem_unlink.c \
 		  sem_wait.c sem_trywait.c sem_post.c sem_findnamed.c
 ifneq ($(CONFIG_DISABLE_SIGNALS),y)
 SEM_SRCS	+= sem_waitirq.c
