@@ -42,6 +42,8 @@
 #include <semaphore.h>
 #include <errno.h>
 
+#include "sem_internal.h"
+
 /****************************************************************************
  * Definitions
  ****************************************************************************/
